# Mario_Project

./: README.md  pyproject.toml  requirements.txt
gym_super_mario_bros/: Rule_Based.py  actions.py  colour_detection.py  colour_goomba.py  mario_RL.py  new_run_mario.py  run_mario.py
gym_super_mario_bros/images/: marioRL.py  mario_locate_objects.py  run.py
